# radiolens

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
app/: dashboard.py
docker/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  troubleshooting.md
examples/api-client/: client.py
examples/basic-inference/: run.py
examples/batch-evaluation/: evaluate.py
examples/training-walkthrough/: train.py
scripts/: export_weights.py  prepare_dataset.py  run_evaluation.py  run_training.py
src/radiolens/: __init__.py  config.py
src/radiolens/api/: __init__.py  contracts.py  endpoints.py  guards.py  providers.py  server.py
src/radiolens/core/: __init__.py  detector.py  preprocessor.py
src/radiolens/data/: __init__.py  augmentor.py  balancer.py  dicom_reader.py
src/radiolens/evaluation/: __init__.py  metrics.py  significance.py  visualizer.py
src/radiolens/training/: __init__.py  callbacks.py  runner.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_inference_api.py  test_training_smoke.py
tests/unit/: __init__.py  test_clinical_metrics.py  test_data_balancer.py  test_detector_build.py  test_image_preprocessor.py
