[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "radiolens"
version = "0.1.0"
description = "Clinical-grade chest X-ray pneumonia detection with cross-validated deep learning"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "radiolens contributors" }]
keywords = [
    "medical-ai",
    "pneumonia-detection",
    "chest-xray",
    "deep-learning",
    "transfer-learning",
    "computer-vision",
    "radiology",
    "clinical-ai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tensorflow>=2.13.0,<2.16",
    "scikit-learn>=1.3.0,<2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0,<3.0",
    "matplotlib>=3.7.0,<4.0",
    "seaborn>=0.12.0,<1.0",
    "Pillow>=9.5.0",
    "scipy>=1.10.0,<2.0",
    "pydantic>=2.0.0,<3.0",
    "pydantic-settings>=2.0.0,<3.0",
    "structlog>=23.0.0,<25.0",
]

[project.optional-dependencies]
api = [
    "fastapi>=0.104.0,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "python-multipart>=0.0.9,<1.0",
    "pydicom>=2.3.0,<3.0",
    "fpdf2>=2.8.0,<3.0",
]
dashboard = [
    "streamlit>=1.28.0,<2.0",
    "pydicom>=2.3.0,<3.0",
    "fpdf2>=2.8.0,<3.0",
    "opencv-python-headless>=4.8.0,<5.0",
]
dev = [
    "pytest>=7.4.0,<10.0",
    "pytest-cov>=4.1.0,<6.0",
    "pytest-asyncio>=0.21.0,<1.0",
    "httpx>=0.25.0,<1.0",
    "ruff>=0.1.0,<1.0",
    "mypy>=1.6.0,<2.0",
    "pre-commit>=3.5.0,<4.0",
    "types-Pillow",
]

[project.scripts]
radiolens-prepare = "radiolens.scripts.prepare_dataset:main"
radiolens-train = "radiolens.scripts.run_training:main"
radiolens-evaluate = "radiolens.scripts.run_evaluation:main"
radiolens-serve = "radiolens.api.server:serve"

[tool.hatch.build.targets.wheel]
packages = ["src/radiolens"]

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
ignore = ["ANN401"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"src/radiolens/api/**" = ["B008"]  # FastAPI Depends/File in defaults is intentional
"examples/**" = ["ANN"]
"scripts/**" = ["ANN"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
explicit_package_bases = true
mypy_path = "src"
disable_error_code = ["misc"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=radiolens",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=65",
    "-v",
]
markers = [
    "slow: marks tests that require GPU or large data (deselect with -m 'not slow')",
    "integration: marks integration tests",
]

[tool.coverage.run]
source = ["src/radiolens"]
omit = [
    "*/__init__.py",
    "*/evaluation/visualizer.py",   # matplotlib plotting utility, no unit tests
    "*/data/dicom_reader.py",       # requires real DICOM files, excluded from fast tests
]

[tool.coverage.report]
show_missing = true
skip_covered = false
